# chronicle-shop

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  pom.xml  versions.bzl
src/main/java/io/machinecode/shop/: App.java  BUILD.bazel  Main.java
src/main/java/io/machinecode/shop/cart/: BUILD.bazel  CartModule.java
src/main/java/io/machinecode/shop/cart/api/: BUILD.bazel  CartDispatcher.java  CartListener.java
src/main/java/io/machinecode/shop/cart/command/: AddProductToCartCommand.java  BUILD.bazel  CalculateTotalForCartCommand.java  RemoveProductFromCartCommand.java  UpdateProductQuantityInCartCommand.java
src/main/java/io/machinecode/shop/cart/domain/: BUILD.bazel  Cart.java  CartItem.java  CartItemId.java  CartProduct.java  CartProductId.java  CartService.java
src/main/java/io/machinecode/shop/cart/event/: BUILD.bazel  CartErrorEvent.java  CartProductAddedEvent.java  CartProductRemovedEvent.java  CartProductUpdatedEvent.java  CartTotalEvent.java
src/main/java/io/machinecode/shop/product/: BUILD.bazel  ProductModule.java
src/main/java/io/machinecode/shop/product/api/: BUILD.bazel  DisplayProductListener.java  ProductBundleListener.java  ProductDispatcher.java  ProductListener.java
src/main/java/io/machinecode/shop/product/command/: CreateProductBundleCommand.java  CreateProductCommand.java  DeleteProductBundleCommand.java  DeleteProductCommand.java  UpdateProductCommand.java
src/main/java/io/machinecode/shop/product/domain/: BUILD.bazel  Product.java  ProductBundle.java  ProductBundleItem.java  ProductPriceInfo.java  ProductService.java
src/main/java/io/machinecode/shop/product/event/: DisplayProductCreatedEvent.java  DisplayProductDeletedEvent.java  DisplayProductUpdatedEvent.java  ProductBundleCreatedEvent.java  ProductBundleDeletedEvent.java  ProductBundleErrorEvent.java  ProductCreatedEvent.java  ProductDeletedEvent.java  ProductErrorEvent.java  ProductUpdatedEvent.java
src/main/java/io/machinecode/shop/product/model/: BUILD.bazel  BundleItem.java  DisplayProductId.java  PriceDetail.java  PriceType.java  ProductType.java
src/test/java/io/machinecode/shop/: AppTest.java  BUILD.bazel  MainTest.java
src/test/java/io/machinecode/shop/bench/: BUILD.bazel  LargerBench.java  SingleBench.java
src/test/java/io/machinecode/shop/bench/support/: BUILD.bazel  BaseBench.java
src/test/java/io/machinecode/shop/cart/: BUILD.bazel  CartModuleTest.java
src/test/java/io/machinecode/shop/cart/domain/: BUILD.bazel  CartServiceTest.java
src/test/java/io/machinecode/shop/cart/support/: BUILD.bazel  TestCartListener.java
src/test/java/io/machinecode/shop/product/: BUILD.bazel  ProductModuleTest.java
src/test/java/io/machinecode/shop/product/domain/: BUILD.bazel  ProductServiceTest.java
src/test/java/io/machinecode/shop/product/support/: BUILD.bazel  TestProductListener.java
tools/: BUILD.bazel  async_profiler.BUILD.bazel
tools/checkstyle/: BUILD.bazel  checkstyle.xml  proprietary-java.txt
tools/java/: java_bench_suite.bzl  java_package.bzl
