load("//tools/java:java_package.bzl", "java_package")

package(default_visibility = ["//visibility:public"])

java_package(
    name = "shop",
    deps = [
        "//src/main/java/io/machinecode/shop/cart",
        "//src/main/java/io/machinecode/shop/product",
        "@maven//:gnu_getopt_java_getopt",
        "@maven//:net_openhft_chronicle_bytes",
        "@maven//:net_openhft_chronicle_core",
        "@maven//:net_openhft_chronicle_queue",
        "@maven//:net_openhft_chronicle_threads",
        "@maven//:net_openhft_chronicle_wire",
    ],
)
