load("//tools/java:java_package.bzl", "java_package")

package(default_visibility = ["//visibility:public"])

java_package(
    name = "cart",
    deps = [
        "//src/main/java/io/machinecode/shop/cart/api",
        "//src/main/java/io/machinecode/shop/cart/command",
        "//src/main/java/io/machinecode/shop/cart/domain",
        "@maven//:net_openhft_chronicle_bytes",
        "@maven//:net_openhft_chronicle_core",
        "@maven//:net_openhft_chronicle_map",
        "@maven//:net_openhft_chronicle_queue",
        "@maven//:net_openhft_chronicle_values",
    ],
)
