load("//tools/java:java_package.bzl", "java_package")

package(default_visibility = ["//visibility:public"])

java_package(
    name = "domain",
    deps = [
        "//src/main/java/io/machinecode/shop/cart/api",
        "//src/main/java/io/machinecode/shop/cart/command",
        "//src/main/java/io/machinecode/shop/cart/event",
        "//src/main/java/io/machinecode/shop/product/api",
        "//src/main/java/io/machinecode/shop/product/event",
        "//src/main/java/io/machinecode/shop/product/model",
        "@maven//:net_openhft_chronicle_core",
        "@maven//:net_openhft_chronicle_map",
        "@maven//:net_openhft_chronicle_values",
    ],
)
