load("//tools/java:java_package.bzl", "java_package")

package(default_visibility = ["//visibility:public"])

java_package(
    name = "support",
    deps = [
        "//src/main/java/io/machinecode/shop/cart/api",
        "//src/main/java/io/machinecode/shop/cart/command",
        "//src/main/java/io/machinecode/shop/cart/event",
    ],
)
